Removed SpringBoot dependency and used plain Spring for tests. Lowered target java version to 9. Improved thread safety in scraping trackers